# nds

./: README.md  clean.sh  init.sh
cmake/: FindDSWIFI.cmake  FindMM.cmake  FindNDS.cmake  devkitarm.cmake  ndsmacros.cmake
examples/: CMakeLists.txt
examples/graphics/: CMakeLists.txt
examples/graphics/sprites/: CMakeLists.txt
examples/graphics/sprites/allocation_test/: CMakeLists.txt
examples/graphics/sprites/allocation_test/src/: main.cpp
examples/graphics/sprites/animate_simple/: CMakeLists.txt
examples/graphics/sprites/bitmap_sprites/: CMakeLists.txt
examples/graphics/sprites/bitmap_sprites/src/: main.cpp
examples/graphics/sprites/fire_and_sprites/: CMakeLists.txt
examples/graphics/sprites/simple/: CMakeLists.txt
examples/graphics/sprites/sprite_extended_palettes/: CMakeLists.txt
examples/graphics/sprites/sprite_rotate/: CMakeLists.txt
examples/hello_world/: CMakeLists.txt
examples/mizux_test/: CMakeLists.txt
examples/mizux_test/arm7/: CMakeLists.txt
examples/mizux_test/arm9/: CMakeLists.txt
